Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13280

CLONE -Narrow no-break space (U+202F) not rendered properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.1.0
    • 4.4.3, 4.5.0, 4.5.1, 4.5.2, 4.5.3, 4.6.0, 4.6.1, 4.6.2, 4.6.3, 4.7.1
    • GUI: Text handling
    • None
    • I did all my GNU/Linux testing on Ubuntu 10.04 (with KDE's apps)
      I used the last VLC to confirm my results on Windows XP an Windows 7.
      (all OS are up to date)
    • 34b870e4b5b1ae23a202443f4ea5a102471c0075

      The narrow no-break space character (U+202F) is not rendered properly with Qt (I tried on GNU/Linux, Windows XP and Windows 7).

      I did some testing and found that no Qt app displays this char properly (it displays nothing, see attachment for some screenshots).

      I think this is an issue in Qt's layout engine (it works with GTK apps on any OS and with other free frameworks I tested).

      The narrow no-break space char was introduced with Unicode 3.0 (1999) and it's used, at least in French, before ";?!»" chars and after "«".
      So this bug really is a problem for French translators (currently we have to fallback to no-break spaces).

      Please, make Qt catch up with competitors and allow Qt apps to have good French translations!

      (I don't know why the former bug was closed as "out of scope", no comment was added)

        1. qt_nnbsp_bug.zip
          179 kB
        2. QTextEdit.png
          QTextEdit.png
          40 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ritt.ks Konstantin Ritt
            malaria Nicolas Delvaux
            Votes:
            6 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes