Fix HB incorrectly hides [narrow non-breaking space] character

U+202F is not of a Default_Ignorable property for a loooong time
(perhaps was treated like a control code by mistake)

Task-number: QTBUG-13280
Change-Id: I3c5ec5fa514039b7bca9ffa28ad6f5355e627855
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 34b870e4b5b1ae23a202443f4ea5a102471c0075 https://github.com/qt/qtbase/commit/34b870e4b5b1ae23a202443f4ea5a102471c0075